--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import './styles/layout/flex';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Roboto', sans-serif;}
+
+
